mari-vanna-website/src/App.css
/* ... */
.dessertpage__title {
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  text-transform: uppercase;
  font-weight: bolder;
  margin: 40px;
  text-align: center;
}

.dessertpage__menu-item {
  display: flex;
  align-items: center;
}

.dessertpage__menu-item-bold {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: bold;
}

.dessertpage__menu-item-text {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  margin-left: 5px;
} 

/* ICON BAR */

.iconbar {
  font-size: 14px;
  height: 211px;
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  text-align: center;
}

.iconbar__address--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 32px;
 }

.iconbar__hours--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 42px;
}

.iconbar__contact--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 42px;
}

.iconbar__check--div {
  border: solid 1px rgba(189, 188, 188, 0.49);
  width: 100%;
  padding-top: 42px;
}

.iconbar__h3 {
  font-family: 'p22-underground', sans-serif;
  letter-spacing: 1px;
  margin-top: 18px;
}

.iconbar__text {
  font-style: italic;
  font-family:"minion-pro";
  margin-top: -5px;
}

/* Dinner page */

.dinnerpage__container {
  display: flex;
  flex-direction: column;
}

.dinnerpage__image {
  width: 100%;
}

.dinnerpage__menu {
  display: flex;
  flex-direction: column;
  align-self: center;
  margin-bottom: 120px;
  margin-left: 90px;
  margin-right: 90px;
}

.dinnerpage__title {
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  text-transform: uppercase;
  font-weight: bolder;
  margin: 40px;
  text-align: center;
}

.dinnerpage__menu-item {
  margin: 5px;
}

.dinnerpage__menu-item-title {
  font-family: 'Lato', sans-serif;
  font-size: 19px;
  font-weight: bold;
  text-transform: uppercase;
  color:#ed5452;
  text-align: center;
  margin-bottom: 5px;
}

.dinnerpage__menu-item-bold {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: bold;
  margin: 0;
}

.dinnerpage__menu-item-text {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  margin-left: 0px;
  margin: 0;
} 

.dinnerpage__line-break {
  width: 80%;
  text-align: center;
  color: black;
}

.dinnerpage__menu-item-subtitle-hot,
.dinnerpage__menu-item-subtitle-cold {
  margin-top: 5px;
  margin-left: 5px;
}

/* MENU NAV */

.menunav {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
}

#menunav__img--lunch {
  width: 100%;
  position: absolute;
  pointer-events: none;
  left: 0;
  top: 0;
  z-index: -1;
}

#menunav__img--dinner {
  width: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  left: 0;
  top: 0;
  z-index: -1;
}

#menunav__img--dessert {
  width: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  left: 0;
  top: 0;
  z-index: -1;
}

#menunav__img--drinks {
  width: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  left: 0;
  top: 0;
  z-index: -1;
}

.menunav__lunch {
  border: 5px solid black;
  height: 8%;
  color: black;
  margin-bottom: 30px;
  text-align: center;
  font-family: 'p22-underground', sans-serif;
  font-size: 50px;
  flex: 1;
  width: 30%;
  margin-top: 10%;
  margin-left: 35%;
}

.menunav__lunch:hover {
  border: 5px solid white;
  color: white;
}

.menunav__dinner {
  border: 5px solid black;
  height: 8%;
  color: black;
  margin-bottom: 30px;
  text-align: center;
  font-family: 'p22-underground', sans-serif;
  font-size: 50px;
  flex: 2;
  width: 30%;
  margin-left: 35%;
}

.menunav__dinner:hover {
  border: 5px solid #ffffff;
  color: white;
}

.menunav__dinner:hover + #menunav__img--dinner {
  opacity: 100;
}

.menunav__dessert {
  border: 5px solid black;
  height: 8%;
  color: black;
  margin-bottom: 30px;
  text-align: center;
  font-family: 'p22-underground', sans-serif;
  font-size: 50px;
  flex: 3;
  width: 30%;
  margin-left: 35%;
}

.menunav__dessert:hover {
  border: 5px solid white;
  color: white;
}

.menunav__dessert:hover + #menunav__img--dessert {
  opacity: 100;
}

.menunav__drinks {
  border: 5px solid black;
  height: 8%;
  color: black;
  text-align: center;
  font-family: 'p22-underground', sans-serif;
  font-size: 50px;
  flex: 4;
  width: 30%;
  margin-left: 35%;
}

.menunav__drinks:hover {
  border: 5px solid white;
  color: white;
}

.menunav__drinks:hover + #menunav__img--drinks {
  opacity: 100;
}
  
  /* ===== Lunch ===== */
.lunchpage__container {
  display: flex;
  flex-direction: column;
}

.lunchpage__image {
  width: 100%;
}

.lunchpage__title {
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  text-transform: uppercase;
  font-weight: bolder;
  margin: 40px;
  text-align: center;
}

.lunchpage__subtitle {
  font-family: 'Lato', sans-serif;
  font-size: 19px;
  font-weight: bold;
  text-transform: uppercase;
  color:#ed5452;
  text-align: center;
  margin-bottom: 5px;
}

.lunchpage__menu {
  display: flex;
  flex-direction: column;
  align-self: center;
  margin-bottom: 120px;
  margin-left: 90px;
  margin-right: 90px;
}

.lunchpage__menu-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 10px;
  margin-bottom: 20px;
}

.lunchpage__menu-bold {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: bold;
  margin-bottom: 3px;
}

.lunchpage__menu-item-text {
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  margin: 0;
} 

.lunchpage__salads,
.lunchpage__appetizers,
.lunchpage__soups,
.lunchpage__entrees {
  margin-top: 30px;
  margin-bottom: 35px;
}

.lunchpage__line-break {
  width: 80%;
  text-align: center;
  color: black;
}

/* Footer */

.footer{
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  background-color: #5d5d5d;
  color: #ffffff;
  height: 40px;
  font-family: 'p22-underground', sans-serif;
}
/* ... */

